--- a/index.html
+++ b/index.html
@@ -323,9 +323,8 @@
     <section id="contact" class="section contact" data-aos="fade-up">
       <h2>Contact Me</h2>
       <p>
-        Please reach out at
-        <a href="mailto:[YOUR_EMAIL]"></a> or fill
-        out the form below:
+        <a href="mailto:ankurbansal05@gmail.com">ankurbansal05@gmail.com</a>.
+        <!-- or fill out the form below: -->
       </p>
       <br /><br />
       </section>
